--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 
     </div>
   </div>
-  <!---
+  
     <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
+      Coded by <a href="https://twitter.com/delatbaba">delatbaba</a>.
     </p>
-  </footer>--->
+  </footer>
 </body>
 </html>
